test/functions/resolution/errors/testBadCallCandidates.15.good
testBadCallCandidates.chpl:14: In method 'test':
testBadCallCandidates.chpl:26: error: unresolved call 'baz(42)'
testBadCallCandidates.chpl:68: note: this candidate did not match: baz(x: C)
testBadCallCandidates.chpl:26: note: because call actual argument #1 with type int(64)
testBadCallCandidates.chpl:68: note: is passed to formal 'x: C'
note: there are also 1 other candidate, use --print-all-candidates to see them
